css/matheusmoreira.css
body {
  --sans-serif-font: "Noto Sans", sans-serif;
  --monospace-font: "Noto Sans Mono", monospace;
  --text-color: hsl(0 0% 90%);
  --background-color: hsl(192deg 100% 5%);
  --border-color: hsl(156deg 40% 45%);
  --link-color: hsl(156deg 80% 55%);
}

body {
  margin: 0;
  padding: 0;
  font: 24px/1.5 var(--sans-serif-font);
  color: var(--text-color);
  background: var(--background-color);
}

header {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  align-content: space-between;
  justify-content: space-between;
  align-items: stretch;
  border: 2px solid var(--border-color);
  margin: 4ch;
  padding: 0;
}

header a {
  font-family: var(--monospace-font);
  text-decoration: none;
  display: block;
  padding: 1ch;
  color: var(--text-color);
  font-size: 1.2em;
  font-weight: bold;
}

header a:hover {
  background-color: var(--border-color);
  color: var(--background-color);
}

header nav {
  display: flex;
  flex-wrap: wrap;
  align-content: stretch;
  justify-content: flex-end;
  align-items: stretch;
}

header nav a {
  text-transform: uppercase;
  display: flex;
  align-items: center;
  border-left: 2px solid var(--border-color);
  padding: 0 1ch;
  font-size: 0.75em;
  font-weight: normal;
}

main {
  max-width: 80ch;
  margin: 40px auto;
  padding: 0 40px;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.2;
}

pre {
  overflow-x: auto;
  margin-left: 2ch;
  border: 2px solid var(--border-color);
  padding: 1ch 2ch;
  background-color: transparent;
}

code {
  font-family: var(--monospace-font);
}

body p code {
  padding: 0.25ch;
  background-color: var(--border-color);
  color: var(--background-color);
}

a {
  color: var(--link-color);
}

aside {
  float: right;
  width: 30%;
  font-size: 75%;
  margin: 1ch;
  border: 2px solid var(--border-color);
  padding: 1ch;
}

aside p:first-child {
  margin-top: 0;
}

aside p:last-child {
  margin-bottom: 0;
}

